2004-11-11  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm (ENHsvg_writec): Escape character & to be &amp; in
	output stream. '<' and '&' are the only escaped characters so far,
	and only in enhanced text mode.

2004-11-12  Dietmar Warning  <warning@danalyse.de>

	* src/specfun.c (inverse_error_func): Replace obsolete attribution of 
	algorithm used for this function.

	* src/util3d.c (map_xy_double): This function is needed independent of
	the image code, so remove #ifdef WITH_IMAGE.

2004-11-11  Ethan Merritt  <merritt@u.washington.edu>

	* demo/datastrings.dem: Add example of using a column both as a 
	numerical value and a string (use y value as a label).

	* src/graphics.h: New TBOOLEAM title_is_suppressed in plot structure
	src/graphics.c (find_maxl_keys do_plot) 
	src/datafile.c (df_set_key_title) plot2d.c (cp_alloc eval_plots):
	Keep an explicit flag indicating whether or not the key should contain
	an entry for this plot.

2004-11-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/doc2texi.el (d2t-get-terminals): Fix search pattern for
	point where to insert terminal drivers after change of indentation
	level in gnuplot.doc.

	* docs/Makefile.in (TERM_H): New variable, points to term.h file
	in the src directory.
	(term.h): Rule generating this file disabled.
	(gnuplot.html, gnuplot.info): Removed superfluous dependencies on
	gnuplot.doc.
	(gnuplot.texi): Run Emacs inside source directory --- building
	gnuplot.texi in an out-of-source build tree is futile, and never
	really worked.
	(doc2gih.o, doc2hlp.o, doc2ipf.o, doc2rnh.o, doc2rtf.o): Build
	online documentation tailored to actual program by including the
	real term.h, instead of a mangled copy.
	(BUILT_SOURCES): Removed term.h from the list.

	* docs/gnuplot.texi: Rebuilt.

	* docs/gnuplot.doc: Cleared some whitespace-only lines.

2004-11-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/stdfn.h
	* src/eval.c (gp_exp) src/specfun.c (f_gamma) src/standard.c (f_tanh):